--- a/Front/src/tpl/ts-report.html
+++ b/Front/src/tpl/ts-report.html
@@ -119,9 +119,9 @@
                     <th md-column md-order-by="cost">Cost</th>
                     <th md-column md-order-by="conversion">Conversion</th>
                     <th md-column md-order-by="revenue">Revenue</th>
-                    <th md-column>CTR</th>
-                    <th md-column>CVR</th>
-                    <th md-column>ROI</th>
+                    <th md-column md-order-by="ctr">CTR</th>
+                    <th md-column md-order-by="cvr">CVR</th>
+                    <th md-column md-order-by="roi">ROI</th>
                 </tr>
             </thead>
             <tbody md-body vs-repeat vs-scroll-parent=".repeater-container">
