hide Sudden change & Fraud Filter

--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -138,7 +138,7 @@
                     </span>
                 </a>
             </li>
-            <li ui-sref-active="active">
+            <!-- <li ui-sref-active="active">
               <md-menu-bar style="padding: 0;">
                   <md-menu>
                     <button ng-click="$mdMenu.open()" class="type-title">
@@ -155,7 +155,7 @@
                     </md-menu-content>
                   </md-menu>
               </md-menu-bar>
-            </li>
+            </li> -->
         </ul>
     </nav>
 </md-sidenav>
