--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -135,7 +135,7 @@
         <table md-table multiple ng-model="selected" md-progress="promise">
             <thead md-head md-order="query.order" fix-head>
             <tr md-row>
-                <th ng-if="canEdit()" md-column style="padding: 0 10px;text-align: center;" class="row-action"><i class="icon-circle"></i></th>
+                <th ng-if="canEdit()" md-column style="text-align: center;" class="row-action">St</i></th>
                 <th md-column ng-if="treeLevel>1"></th>
                 <th md-column md-order-by="{{item.key}}" ng-repeat="item in columns track by $index" ng-class="{'item-name': $index == 0}"
                     ng-if="preferences.reportViewColumns[item.key].visible || item.role=='name'">{{item.name}}
