首字母大写

--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -106,7 +106,7 @@
                             <li><i class="icon-ok"></i>3rd Traffic Source API integrate(more)</li>
                         </ol>
                         <a href="http://panel.newbidder.com/#/access/signup">
-                            <button class="plan-btn">Contact us<i class="icon-arrow-right"></i></button>
+                            <button class="plan-btn">Contact Us<i class="icon-arrow-right"></i></button>
                         </a>
                     </div>
                 </li>
