--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -117,7 +117,8 @@
 
 <div class="breadcrumb-div">
 <div ng-if="filters.length > 0">
-        <ul class="breadcrumb">
+    <ul class="breadcrumb">
+        <li><em><a ng-click="removeFilter(-1)"><span style="color: dodgerblue">Home</span></a></em></li>
         <li ng-repeat="filter in filters track by $index">
             <em ng-if="$index < filters.length-1">
                 <a ng-click="removeFilter($index)"><span style="color: dodgerblue">{{filter.name}}</span></a>
