官网和平台都去掉QQ 官网添加linkedin

--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -342,8 +342,7 @@
                 <ul class="list-01">
                     <li><a href="https://www.facebook.com/newbidder" target="_blank"><i class="icon-facebook-sign"></i>Facebook</a></li>
                     <li><a href="https://twitter.com/newbidder" target="_blank"><i class="icon-twitter-sign"></i>Twitter</a></li>
-                    <li><a class="qq" target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=cc321816fb1f51c997a8e7c62b177f6ca9825393727b259e1319292d236f6392" alt="NewBidder官方支持群" title="NewBidder官方支持群">
-                    </a></li>
+                    <li><a href="http://www.linkedin.com/company-beta/16200396"><i class="icon-linkedin-sign"></i>LinkedIn</a></li>
                 </ul>
             </div>
             <div class="col-xs-6 col-sm-4">
