continue按钮隐藏动作延迟问题

--- a/Front/src/tpl/flow-edit.html
+++ b/Front/src/tpl/flow-edit.html
@@ -520,7 +520,7 @@
         <i class="icon-ok"></i>
         Save&amp;close
       </button>
-      <button class="btn btn-primary save-btn" ng-show="showContinue" ng-click="continueEdit()">
+      <button class="btn btn-primary save-btn flow-continue" ng-show="showContinue" ng-click="continueEdit()">
         <i class="icon-ok"></i>
         Continue
       </button>
