--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -138,7 +138,7 @@
             <tr md-row>
                 <th ng-if="canEdit()" md-column style="text-align: center;" class="row-action">St</i></th>
                 <th md-column ng-if="treeLevel>1"></th>
-                <th md-column md-order-by="{{item.key}}" ng-repeat="item in columns track by $index" ng-class="{'item-name': $index == 0}"
+                <th md-column md-order-by="{{item.origKey || item.key}}" ng-repeat="item in columns track by $index" ng-class="{'item-name': $index == 0}"
                     ng-if="preferences.reportViewColumns[item.key].visible || item.role=='name'">{{item.name}}
                 </th>
             </tr>
