--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -27,9 +27,9 @@
             <a href="http://www.newbidder.com"><img src="img/logo-3.png"></a>
             <div id="menu3">
                 <ul class="nav-col">
-                    <li><a href="#pricing">Pricing</a></li>
                     <li><a href="#feature">Feature</a></li>
                     <li><a href="#demo">Demo</a></li>
+                    <li><a href="http://discourse.newbidder.com/">Forum</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li><a href="http://panel.newbidder.com/#/access/signin">Sign in</a></li>
                     <li><a href="http://panel.newbidder.com/#/access/signup">Sign up</a></li>
@@ -44,9 +44,9 @@
             <nav>
                 <a href="http://www.newbidder.com"><img src="img/logo-two.png" style="width:148px;float:left;margin-top:10px;"></a>
                 <ul>
-                    <li><a href="#pricing2">Pricing</a></li>
                     <li><a href="#feature2">Feature</a></li>
                     <li><a href="#demo2">Demo</a></li>
+                    <li><a href="http://discourse.newbidder.com/">Forum</a></li>
                     <li><a href="#contact2">Contact</a></li>
                     <li><a href="http://panel.newbidder.com/#/access/signin">Sign in</a></li>
                     <li><a href="http://panel.newbidder.com/#/access/signup">Sign up</a></li>
@@ -138,7 +138,7 @@
                     <div class="item">
                         <img class="img-responsive" src="img/t-pic-06.png" alt="...">
                     </div>
-                  
+
                 </div>
                 <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
                     <span class="icon-angle-left" aria-hidden="true"></span>
