--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="../bower_components/angular-material-data-table/dist/md-data-table.css"/>
     <link rel="stylesheet" href="../bower_components/angular-toastr/dist/angular-toastr.css"/>
     <link rel="stylesheet" href="../bower_components/selectize/dist/css/selectize.bootstrap3.css"/>
+    <link rel="stylesheet" href="../bower_components/jQuery-contextMenu/dist/jquery.contextMenu.min.css"/>
     <link rel="stylesheet" href="assets/css/bootstrap.css"/>
     <link rel="stylesheet" href="assets/css/s-fonts.css"/>
     <link rel="stylesheet" href="assets/css/font-awesome.min.css"/>
@@ -73,6 +74,8 @@
 <script src="../bower_components/qrcode/lib/qrcode.min.js"></script>
 <script src="../bower_components/angular-qr/angular-qr.min.js"></script>
 <script src="../bower_components/angular-vs-repeat/src/angular-vs-repeat.min.js"></script>
+<script src="../bower_components/jQuery-contextMenu/dist/jquery.contextMenu.min.js"></script>
+<script src="../bower_components/jQuery-contextMenu/dist/jquery.ui.position.min.js"></script>
 
 <!-- App -->
 <script src="js/app.js"></script>
@@ -115,6 +118,48 @@
 <script src="js/controllers/tsOfferReport.js"></script>
 <script src="js/directives/permission.js"></script>
 <!-- endbuild -->
+
+<script type="text/javascript">
+var moduleName = (function($) {
+    var cache = {};
+    var temp = (function() {
+        var cache = {};
+        cache = {};
+        function temp(str, data){
+            // Figure out if we're getting a template, or if we need to
+            // load the template - and be sure to cache the result.
+            var fn = !/\W/.test(str) ?
+                cache[str] = cache[str] ||
+                    temp(document.getElementById(str).innerHTML) :
+                // Generate a reusable function that will serve as a template
+                // generator (and which will be cached).
+                new Function("obj",
+                    "var p=[],\n\tprint=function(){p.push.apply(p,arguments);};\n" +
+                        // Introduce the data as local variables using with(){}
+                        "\nwith(obj){\np.push('" +
+                        // Convert the template into pure JavaScript
+                        str
+                            .replace(/[\r\t\n]/g, " ")
+                            .split("<%").join("\t")
+                            .replace(/((^|%>)[^\t]*)'/g, "$1\r")
+                            .replace(/\t=(.*?)%>/g, "',\n$1,\n'")
+                            .split("\t").join("');\n")
+                            .split("%>").join("\np.push('")
+                            .split("\r").join("\\'") +
+                        "');\n}\nreturn p.join('');");
+            // Provide some basic currying to the user
+            return data ? fn(data) : fn;
+        }
+        return {
+            temp: temp
+        };
+    })();
+
+    $.temp = temp.temp;
+
+    return $.temp;
+})(jQuery);
+</script>
 
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
