--- a/Front/src/tpl/automatedRule-edit-dialog.html
+++ b/Front/src/tpl/automatedRule-edit-dialog.html
@@ -53,7 +53,7 @@
             </div>
             <div class="form-group"  ng-repeat="(conArrIdx, condition) in conditionArray">
                 <label class="col-sm-3 control-label" ng-class="{'isShowNameCondition': conArrIdx != 0}">Conditions<span class="star-icon">*</span>: </label>
-                <div class="col-sm-7 my-select">
+                <div class="col-sm-9 my-select">
                     <md-select aria-label="ConditionKey" class="cs-subform-select condition-select" ng-model="conditionArray[conArrIdx].key">
                         <md-option value="{{con.key}}" ng-repeat="con in conditions" ng-disabled="conditionDisable(con, conArrIdx)">{{con.display}}</md-option>
                     </md-select>
@@ -62,12 +62,12 @@
                         <md-option value="<"><</md-option>
                     </md-select>
                     <div class="rule-condition-div clearfix">
-                      <input type="text" name="conValue" class="form-control rule-edit-input cs-subform-select" ng-model="condition.value" required>
+                      <input type="number" name="conValue{{$index}}" class="form-control rule-edit-input cs-subform-select" ng-model="condition.value" required>
                       <span class="dollar-icon">{{conditionMap[conditionArray[conArrIdx].key]}}</span>
                     </div>
-                    <span style="color:red" ng-show="editForm.conValue.$dirty && editForm.conValue.$invalid">
-                        <span ng-show="editForm.conValue.$error.required">Value is required.</span>
-                        <span ng-show="editForm.conValue.$error.number">Value is valid.</span>
+                    <span style="color:red" ng-show="editForm.conValue{{$index}}.$dirty && editForm.conValue{{$index}}.$invalid">
+                        <span ng-show="editForm.conValue{{$index}}.$error.required">Value is required.</span>
+                        <span ng-show="editForm.conValue{{$index}}.$error.number">Value is valid.</span>
                     </span>
                     <em ng-click="deleteCondition(condition)" class="rule-condition em-close" ng-if="$index > 0"><i class="material-icons">delete</i></em>
                 </div>
