--- a/Front/src/tpl/fraudFilter-edit-dialog.html
+++ b/Front/src/tpl/fraudFilter-edit-dialog.html
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">Dimension<span class="star-icon">*</span>:</label>
-                <div class="col-sm-7 my-select">
+                <div class="col-sm-7 my-select dimension">
                     <md-select aria-label="Dimension" class="cs-subform-select" ng-model="formData.dimension">
                         <md-option value="IP">IP</md-option>
                     </md-select>
