tool路由跳转兼容firefox

--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -145,10 +145,10 @@
                     </button>
                     <md-menu-content width="3">
                       <md-menu-item>
-                        <md-button><a ui-sref="app.suddenChange" md-ink-ripple>Sudden Change</a></md-button>
+                        <md-button ui-sref="app.suddenChange" style="padding-top:0;">Sudden Change</md-button>
                       </md-menu-item>
                       <md-menu-item>
-                        <md-button><a ui-sref="app.fraudFilter">Fraud Filter</a></md-button>
+                        <md-button ui-sref="app.fraudFilter" style="padding-top:0;">Fraud Filter</md-button>
                       </md-menu-item>
                     </md-menu-content>
                   </md-menu>
