tools menu add down icon

--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -140,8 +140,10 @@
               <md-menu-bar style="padding: 0;">
                   <md-menu>
                     <button ng-click="$mdMenu.open()" class="type-title">
-                      <i class="icon-cogs"></i>
-                      Tool
+                      <span class="tools-menu clearfix">
+                        <i class="icon-cogs"></i>
+                        <span class="tools-word">Tools</span><i class="material-icons md-mini"></i>
+                      </span>
                     </button>
                     <md-menu-content width="3">
                       <md-menu-item>
