sudden change&Fraud Filter 添加可选状态

--- a/Front/src/tpl/automatedRule-edit-dialog.html
+++ b/Front/src/tpl/automatedRule-edit-dialog.html
@@ -96,6 +96,12 @@
                     </md-select>
                 </div>
             </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label">Rule status:</label>
+                <div class="col-sm-7">
+                  <md-switch class="md-primary" ng-model="item.status" style="margin:0;width:36px;"></md-switch>
+                </div>
+            </div>
         </form>
 
     </md-dialog-content>
